[#194][be][briefing]feat: 브리핑 루틴 추가